--- a/testing.html
+++ b/testing.html
@@ -1,4 +1,4 @@
-<form action="YOUR_WEB_APP_URL_HERE" method="POST">
+<form action="https://script.google.com/macros/s/AKfycbzgUNrkDnQp3Dr_e2xzW0Nl9io8JtdBmyLB-f24tOj_MgJ_AYDocC-6G57e3rECvXtfJw/exec" method="POST">
   <input type="text" name="name" value="Test">
   <input type="submit">
 </form>
